2009-10-23  Lex Trotman  <elextr.at.gmail.dot.com>

 * doc/geany.txt, doc/geany.html:
   Add missing underscores to links.


2009-10-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/keybindings.h, doc/geany.txt, doc/geany.html:
   Add 'Move line(s) up/down' keybindings.


2009-10-22  Lex Trotman  <elextr.at.gmail.dot.com>

 * src/build.c, src/build.h, src/filetypes.h:
   Include code for project filetype execute commands and fix bug in
   saving project filetypes list.
 * src/project.c, src/build.c, doc/geany.txt:
   Make non-project execute configuration save to filetypes not geany.conf.
   Fix closing of project failing to remove build commands dialog entry.


2009-10-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/project.c, src/ui_utils.c:
   Set border width for project properties build table.
 * geany.glade, src/interface.c:
   Don't expand hard tab width alignment.


2009-10-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c, src/filetypes.c, src/document.c, src/symbols.c,
   doc/geany.txt, doc/geany.html:
   Support loading global tags files for custom filetypes.
 * src/keybindings.c, src/keybindings.h, src/editor.c, src/editor.h,
   doc/geany.txt, doc/geany.html:
   Add 'Word part completion' keybinding so keys other than Tab can be
   used, or to clear/change the combination so Tab does full completion
   like before.
 * src/keybindings.c, src/keybindings.h, doc/geany.txt, doc/geany.html:
   Add 'Select to previous/next word part' keybindings.
 * src/keybindings.c, src/keybindings.h, doc/geany.txt, doc/geany.html:
   Add 'Switch to Messages' focus keybinding.


2009-10-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Add 'Custom filetypes' section.
 * src/filetypes.c, src/filetypes.h, src/document.c,
   doc/geany.txt, doc/geany.html, tagmanager/tm_source_file.c,
   tagmanager/include/tm_source_file.h: