@@ -2013,6 +2013,8 @@ current document you are editing.</dd>
 <dd>Show all the documents you have open currently. This can be used to
 change between documents (see <a class="reference" href="#switching-between-documents">Switching between documents</a>) and
 to perform some common operations such as saving, closing and reloading.</dd>
+<dt>Position</dt>
+<dd>Whether to place the sidebar on the left or right of the editor window.</dd>
 </dl>
 </div>
 <div class="section">
@@ -5802,7 +5804,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2009-10-22 21:35 UTC.
+Generated on: 2009-10-23 16:09 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
